Applied DVRP for all heuristics